--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: Setup Git
         run: |
-          git config --global user.email "${{ github.actor }}@local"
-          git config --global user.name "${{ github.actor }}"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
 
       - name: Bump Version
         if: steps.ch_check.outputs.files_exists == 'true'
