feat(DC): Automatic version and changelog

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: ChangeLog Generation
 
-on:
-  push:
-    branches: [ develop, master ]
+on: 
+  pull_request:
+    types: closed
+    branches: 
+      - master
+      - develop
 
 jobs:
   generate:
