fix(CI): remove dev

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,9 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-
-      - name: Bump Version Dev
-        if: steps.ch_check.outputs.files_exists == 'true' && ${{ github.base_ref }} == "develop"
-        run: standard-version --prerelease dev
       
       - name: Bump Version Master
-        if: steps.ch_check.outputs.files_exists == 'true' && ${{ github.base_ref }} == "master"
+        if: steps.ch_check.outputs.files_exists == 'true'
         run: standard-version
       
       - name: Init Version
